# src/documentation/Tools/tools.schema.ts
@@ -28,9 +28,21 @@ const toolsGetSchema: Schema = {
 	required: [],
 };
 
+const toolsListSchema: Schema = {
+	type: "object",
+	properties: {
+		id: { type: "string", description: "The id of the tool", default: "1" },
+		title: { type: "string", description: "The title of the tool", default: "Tool title" },
+		link: { type: "string", description: "The link of the tool", default: "https://example.com" },
+		description: { type: "string", description: "The description of the tool", default: "Tool description" },
+		tags: { type: "array", description: "The tags of the tool", default: ["tag1", "tag2"] },
+	},
+};
+
 const ToolsSchema = {
 	ToolsCreate: toolsCreateSchema,
 	ToolsGet: toolsGetSchema,
+	ToolsList: toolsListSchema,
 };
 
 export { ToolsSchema };
