# src/swagger-output.json
@@ -21,7 +21,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/",
+      "url": "http://localhost:3000",
       "description": "Local server",
       "variables": {}
     }
@@ -143,6 +143,39 @@
           }
         },
         "required": []
+      },
+      "ToolsList": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "The id of the tool",
+            "default": "1"
+          },
+          "title": {
+            "type": "string",
+            "description": "The title of the tool",
+            "default": "Tool title"
+          },
+          "link": {
+            "type": "string",
+            "description": "The link of the tool",
+            "default": "https://example.com"
+          },
+          "description": {
+            "type": "string",
+            "description": "The description of the tool",
+            "default": "Tool description"
+          },
+          "tags": {
+            "type": "array",
+            "description": "The tags of the tool",
+            "default": [
+              "tag1",
+              "tag2"
+            ]
+          }
+        }
       }
     }
   },
@@ -300,6 +333,79 @@
         ]
       },
       "get": {
+        "summary": "List all tools",
+        "description": "List all tools",
+        "parameters": [
+          {
+            "name": "tag",
+            "in": "query",
+            "description": "Filter by tag",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "useRegex",
+            "in": "query",
+            "description": "Use regex to filter by tag",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ToolsList"
+                },
+                "example": {
+                  "is_error": false,
+                  "response": [
+                    {
+                      "id": "1",
+                      "title": "Tool title",
+                      "link": "https://example.com",
+                      "description": "Tool description",
+                      "tags": [
+                        "tag1",
+                        "tag2"
+                      ]
+                    },
+                    {
+                      "id": "2",
+                      "title": "Tool title",
+                      "link": "https://example.com",
+                      "description": "Tool description",
+                      "tags": [
+                        "tag1",
+                        "tag2"
+                      ]
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DefaultError"
+                },
+                "example": {
+                  "is_error": true,
+                  "message": "Something went wrong"
+                }
+              }
+            }
+          }
+        },
         "tags": [
           "Tools"
         ]
